new tags everywhere

--- a/_posts/ionic2/2016-12-29-clase-1-feed.md
+++ b/_posts/ionic2/2016-12-29-clase-1-feed.md
@@ -6,6 +6,11 @@ tags: [class, ionic2]
 categories: ionic2
 author: carlosrojas
 cover: "https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f"
+versions:
+  - title: 'ionic'
+    number: '2.0.0-rc.3'
+  - title: 'ionic-native'
+    number: '2.2.3'
 ---
 
 <amp-img width="1024" height="512" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f"></amp-img>
