--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -6,6 +6,11 @@ tags: [class, ionic2]
 categories: ionic2
 author: carlosrojas
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fclase2%2Fclase2.png?alt=media&token=2d7a8b80-e4d7-4a18-a0bc-2e4c7c12ba1e"
+versions:
+  - title: 'ionic'
+    number: '2.0.0-rc.3'
+  - title: 'ionic-native'
+    number: '2.2.3'
 ---
 
 <amp-img width="1024" height="512" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fclase2%2Fclase2.png?alt=media&token=2d7a8b80-e4d7-4a18-a0bc-2e4c7c12ba1e"></amp-img> 
