--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -6,6 +6,9 @@ tags: [angular2, tips]
 categories: tips
 author: nicobytes
 cover: "http://i.cubeupload.com/vrWyKl.png"
+versions:
+  - title: 'ionic'
+    number: '2.0.0-rc2'
 ---
 
 > Los [**Observables**]({{site.urlblog}}/ionic2/observables-angular2){:target="_blank"} ahora son pieza clave en Ionic 2 y Angular 2, en artículos pasados vimos como consumir una [**REST API**]({{site.urlblog}}//ionic2/rest-api-with-ionic-2){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables con **ForkJoin**.
