implement legal markdown

--- a/_posts/ionic2/2016-06-07-beta8.md
+++ b/_posts/ionic2/2016-06-07-beta8.md
@@ -83,31 +83,31 @@ Aqui todos los cambios:
   - `change` -> `ionChange`
 
 
-### Pasos para actulizar hacia Beta 8.
+### Pasos para actualizar hacia Beta 8.
 
 Remplazar todas las intancias de *@Page* con *@Component*
 
-{% highlight javascript %}
+```ts
 import {Page} from 'ionic-angular';
 
 @Page({
 
 })
-{% endhighlight %}
+```
 
 remplazar con:
 
-{% highlight javascript %}
+```ts
 import {Component} from '@angular/core';
 
 @Component({
 
 })
-{% endhighlight %}
+```
 
 Remplazar *@App* con *@Component*, agregando la función ionicBootstrap al final con su *config*.
 
-{% highlight javascript %}
+```ts
 import {App, Platform} from 'ionic-angular';
 
 @App({
@@ -119,11 +119,11 @@ import {App, Platform} from 'ionic-angular';
 export class MyApp {
 
 }
-{% endhighlight %}
+```
 
 remplazar con:
 
-{% highlight javascript %}
+```ts
 import {Component} from '@angular/core';
 import {ionicBootstrap, Platform} from 'ionic-angular';
 
@@ -142,52 +142,52 @@ export class MyApp {
 ionicBootstrap(MyApp, [ConferenceData, UserData], {
   tabbarPlacement: 'bottom'
 });
-{% endhighlight %}
+```
 
 Renombrar cualquier uso de *IonicApp* por *App*.
 
-{% highlight javascript %}
+```ts
 import {IonicApp} from 'ionic-angular';
 
 constructor(
   private app: IonicApp
 ) {
-{% endhighlight %}
+```
 
 remplazar con:
 
-{% highlight javascript %}
+```ts
 import {App} from 'ionic-angular';
 
 constructor(
   private app: App
 ) {
-{% endhighlight %}
+```
 
 Renombrar cualquier uso del ciclo de vida.
 
-{% highlight javascript %}
+```ts
 onPageDidEnter() {		 
   console.log("Entered page!");
 }
-{% endhighlight %}
+```
 
 remplazar con:
 
-{% highlight javascript %}
+```ts
 ionViewDidEnter() {		 
   console.log("Entered page!");
 }
-{% endhighlight %}
+```
   
 Renombrar los eventos de ionic.
 
-{% highlight html %}
+```html
 <ion-slides (slideChangeStart)="onSlideChangeStart($event)">
-{% endhighlight %}
+````
 
 remplazar con:
 
-{% highlight html %}
+```html
 <ion-slides (ionWillChange)="onSlideChangeStart($event)">
-{% endhighlight %}
+```
