--- a/_posts/news/2016-06-17-beta9.md
+++ b/_posts/news/2016-06-17-beta9.md
@@ -30,7 +30,7 @@ Es decir, un ejemplo es  como funciona **Inbox** by Gmail, en la cual podemos po
 
 Ahora miremos cómo sería el código: 
 
-{% highlight html linenos %}
+```html
 <ion-item-sliding>
   <ion-item>
     Item 1
@@ -50,7 +50,7 @@ Ahora miremos cómo sería el código:
     </button>
   </ion-item-options>
 </ion-item-sliding>
-{% endhighlight %}
+```
 
 Aqui todos el detalle que trae esta versión ([2.0.0-beta.9](https://github.com/driftyco/ionic/compare/v2.0.0-beta.8...v2.0.0-beta.9)):
 
@@ -107,5 +107,3 @@ Aqui todos el detalle que trae esta versión ([2.0.0-beta.9](https://github.com/
 ### Performance Improvements
 
 * **virtualScroll:** improve UIWebView virtual scroll ([ff1daa6](https://github.com/driftyco/ionic/commit/ff1daa6))
-
-<amp-img width="2084" height="1152" layout="responsive" src="http://i.imgur.com/G0XmsHI.jpg"></amp-img>
