--- a/_posts/news/2016-07-01-ionic-2-beta-10.md
+++ b/_posts/news/2016-07-01-ionic-2-beta-10.md
@@ -28,7 +28,7 @@ Se basa en un cambio en la estructura, sobre el componente `ion-content` que aho
 
 El código sería así:
 
-{% highlight html linenos %}
+```html
 <ion-header class="opaque">
   <ion-navbar no-border-bottom>
     <ion-title>Toy Story</ion-title>
@@ -48,11 +48,11 @@ El código sería así:
 <ion-content fullscreen>
   ...
 </ion-content>
-{% endhighlight %}
+```
 
 El código css así:
 
-{% highlight css linenos %}
+```css
 .opaque {
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px);
@@ -61,7 +61,7 @@ El código css así:
 .opaque .toolbar-background {
   background-color: rgba(#f8f8f8, 0.55);
 }
-{% endhighlight %}
+```
 
 # ¿Cómo actualizar?
 
@@ -81,11 +81,11 @@ npm install --save ionic-angular@2.0.0-beta.10 @angular/common@2.0.0-rc.3 @angul
 - `ion-navbar` no longer has the `*navbar` attribute.
 - `ion-navbar` should now be wrapped in an `ion-header`
 
- {% highlight html linenos %}
+```html
   <ion-header>
     <ion-navbar></ion-navbar>
   </ion-header>
- {% endhighlight %}
+```
 
 - `ios` only: `ion-toolbar`/`ion-navbar` will always have borders to both the top and bottom of the element. Use the attributes `no-border-top` and `no-border-bottom` to remove the respective borders.
 - An `ion-nav` or `ion-tabs` is required in the root component. If one of these does not exist your content may be pushed up behind your header.
@@ -103,19 +103,19 @@ npm install --save ionic-angular@2.0.0-beta.10 @angular/common@2.0.0-rc.3 @angul
 
 2. Remove the `*navbar` attribute so this:
 
-{% highlight html linenos %}
+```html
 <ion-navbar *navbar>
-{% endhighlight %}
+```
 
   becomes this:
 
-{% highlight html linenos %}
+```html
 <ion-navbar>
-{% endhighlight %}
+```
 
 3. Wrap any toolbars/navbars above the `ion-content` in an `ion-header`. The following:
 
-{% highlight html linenos %}
+```html
   <ion-navbar>
     <ion-title>
       Navbar Title
@@ -131,10 +131,10 @@ npm install --save ionic-angular@2.0.0-beta.10 @angular/common@2.0.0-rc.3 @angul
   <ion-content>
 
   </ion-content>
-{% endhighlight %}
+```
 
   becomes:
-{% highlight html linenos %}
+```html
   <ion-header>
     <ion-navbar>
       <ion-title>
@@ -152,11 +152,11 @@ npm install --save ionic-angular@2.0.0-beta.10 @angular/common@2.0.0-rc.3 @angul
   <ion-content>
 
   </ion-content>
-{% endhighlight %}
+```
 
 4. Wrap any toolbars/navbars after the `ion-content` in an `ion-footer`. The following:
 
-{% highlight html linenos %}
+```html
   <ion-content>
 
   </ion-content>
@@ -164,11 +164,11 @@ npm install --save ionic-angular@2.0.0-beta.10 @angular/common@2.0.0-rc.3 @angul
   <ion-toolbar position="bottom">
     <ion-title>Footer Toolbar</ion-title>
   </ion-toolbar>
-{% endhighlight %}
+```
 
   becomes:
 
-{% highlight html linenos %}
+```html
   <ion-content>
 
   </ion-content>
@@ -178,7 +178,7 @@ npm install --save ionic-angular@2.0.0-beta.10 @angular/common@2.0.0-rc.3 @angul
       <ion-title>Footer Toolbar</ion-title>
     </ion-toolbar>
   </ion-footer>
-{% endhighlight %}
+```
 
 
 ### Bug Fixes
