--- a/_posts/news/2016-11-06-ionic-2-rc-2.md
+++ b/_posts/news/2016-11-06-ionic-2-rc-2.md
@@ -14,7 +14,7 @@ cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts
 
 En este nuevo release no hay *BREAKING CHANGES* es decir solo debemos actualizar nuestro `package.json` con estas versiones:
 
-{% highlight json %}
+```json
 {
   "dependencies": {
     "@angular/common": "2.1.1",
@@ -38,7 +38,7 @@ En este nuevo release no hay *BREAKING CHANGES* es decir solo debemos actualizar
     "typescript": "2.0.6"
   }
 }
-{% endhighlight %}
+```
 
 Si se manejan otras dependencias tambien deberias actualizar, luego solo borras la carpeta de `node_modules` y ejecutas:
 
