--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -23,7 +23,7 @@ Un ejemplo puede ser estas dos peticiones:
 
 `api.domain.com/api/v2/events` que responde lo siguiente:
 
-{% highlight json %}
+```json
 [
   {
     "id": 1,
@@ -38,11 +38,11 @@ Un ejemplo puede ser estas dos peticiones:
     "speaker_id": 2
   }
 ]
-{% endhighlight %}
+```
 
 Y `api.domain.com/api/v2/speakers` que responde lo siguiente:
 
-{% highlight json %}
+```json
 [
   {
     "id": 1,
@@ -55,11 +55,11 @@ Y `api.domain.com/api/v2/speakers` que responde lo siguiente:
     "job": "I don't know"
   }
 ]
-{% endhighlight %}
+```
 
 Tenemos dos peticiones donde cada evento tiene relacionado un speaker, pero en nuestra aplicación queremos tener todo el evento completo en modo JSON con la relación de evento y speaker, de esta manera:
 
-{% highlight json %}
+```json
 [
   {
     "id": 1,
@@ -84,7 +84,7 @@ Tenemos dos peticiones donde cada evento tiene relacionado un speaker, pero en n
     }
   }
 ]
-{% endhighlight %}
+```
 
 # Solución 1 (esto seria lo mejor):
 
@@ -103,7 +103,7 @@ Como vemos usando **ForkJoin** podemos ejecutar varias peticiones en paralelo y 
 Abajo encontrarán el código completo para cada caso: 
 
 ## Sin **ForkJoin**:
-{% highlight javascript linenos %}
+```ts
 
 import { Injectable } from '@angular/core';
 import { Http } from '@angular/http';
@@ -165,11 +165,11 @@ export class TestService {
 
 }
 
-{% endhighlight %}
+```
 
 ## Con **ForkJoin**:
 
-{% highlight javascript linenos %}
+```ts
 import { Injectable } from '@angular/core';
 import { Http } from '@angular/http';
 import { Observable } from 'rxjs/Observable';
@@ -224,4 +224,4 @@ export class TestService {
 
 }
 
-{% endhighlight %}
+```
