:bug: fix errors w/ forms

--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -42,7 +42,7 @@ Objetive-C. Pero ahora nosotros vamos a poder usar estas caracteristicas en Java
 
 ##### ES6 (Ahora)
 
-{% highlight js %}
+```js
 
 class Person {
   name;
@@ -57,12 +57,11 @@ class Person {
     return this.name;
   }
 }
-
-{% endhighlight %}
+```
 
 ##### ES5 (Antés)
 
-{% highlight js %}
+```js
 
 var Person = function (name, age) {
     this.name = name;
@@ -73,7 +72,7 @@ Person.prototype.getName = function () {
     return this.name;
 };
 
-{% endhighlight %}
+```
 
 #### Modulos
 
@@ -81,7 +80,7 @@ Ahora nosotros escribimos y podemos importar nuestras librerias sin mucho trabaj
 
 ##### ES6 (Ahora)
 
-{% highlight js %}
+```js
 
 //  lib/math.js
 export function multiply (x, y) { return x * y }
@@ -90,11 +89,11 @@ export function multiply (x, y) { return x * y }
 import { multiply } from "./lib/math"
 console.log(multiply(2, 2));
 
-{% endhighlight %}
+```
 
 ##### EC5 (Antés)
 
-{% highlight js %}
+```js
 
 //  lib/math.js
 LibMath = {};
@@ -104,7 +103,7 @@ LibMath.multiply = function (x, y) { return x * y };
 var math = LibMath;
 console.log(math.multiply(2, 2));
 
-{% endhighlight %}
+```
 
 {% include blog/subscribe.html %}
 
@@ -115,7 +114,7 @@ en Javascript para que lo puedas integrar facilmente.
 
 ##### ES6 (Ahora)
 
-{% highlight js %}
+```js
 
 doSomething(){
    return new Promise((resolve) =>{
@@ -127,11 +126,11 @@ doSomething().then(rta => {
   console.log(rta);
 });
 
-{% endhighlight %}
+```
 
 ##### ES5 (Antes)
 
-{% highlight js %}
+```js
 
 function doSomething (onDone) {
   onDone();
@@ -141,7 +140,7 @@ doSomething(function(rta){
   console.log(rta);
 })
 
-{% endhighlight %}
+```
 
 ## let y const
 
@@ -149,7 +148,7 @@ Ahora podemos integrar el alcance de las variables sin usa funciones de autoinvo
 
 ##### ES6 (Ahora)
 
-{% highlight js %}
+```js
 
 const PI = 3.14;
 if(true) {
@@ -160,18 +159,18 @@ console.log(PI); //3.14
 
 PI = 3.12; //Error. PI is Constant.
 
-{% endhighlight %}
+```
 
 ##### ES5 (Antes)
 
-{% highlight js %}
+```js
 
 if(true) {
   var twitter = "@startupersio";
 }
 console.log(twitter); //twitter is global
 
-{% endhighlight %}
+```
 
 Lo importante a entender ahora es que vamos a poder utilizar estas nuevas caracteristicas en Ionic 2.
 
@@ -185,7 +184,7 @@ Por ejemplo:
 
 ##### Tipos
 
-{% highlight js %}
+```ts
 
 // Only string permitted.
 
@@ -193,19 +192,18 @@ let alert = (msg: string) => {
   alert(msg);
 }
 
-{% endhighlight %}
+```
 
 ##### Interfaces
 
-{% highlight js %}
+```ts
 
 interface Shoe {
   brand: string,
   size: number,
   isCasual: boolean
 }
-
-{% endhighlight %}
+```
 
 Ok, lo importante a enteder aqui es que vamos a tener mas caracteristicas gracias a TypeScript.
 
@@ -229,19 +227,17 @@ Algunos ejemplos:
 
 ##### Actualizamos la propiedad value con el resultado de la expresion firstName.
 
-{% highlight html %}
-
+```html
 <input [value]="firstName">
-
-{% endhighlight %}
+```
 
 #####  Actualizamos el texto contenido en ponyName, por ejemplo, "Hello seabiscuit".
 
-{% highlight html %}
+```html
 {% raw %}
 <p> Hello {{ ponyName }} </p>
 {% endraw %}
-{% endhighlight %}
+```
 
 Lo importante aqui es que necesitaras recordar que tu vas a usar Angular 2 todo el tiempo con tus nuevas Apps en Ionic 2.
 
