--- a/_posts/news/2017-04-05-ionic-v-3.md
+++ b/_posts/news/2017-04-05-ionic-v-3.md
@@ -36,12 +36,12 @@ Sip :p
 
 * **Tipografia** Se han removido los siguientes selectores de estilo.
 
-````
+```css
 h1[color], h2[color], h3[color], h4[color], h5[color], h6[color],
 a[color]:not([ion-button]):not([ion-item]):not([ion-fab]), p[color],
 span[color], b[color], i[color], strong[color], em[color],
 small[color], sub[color], sup[color]
-````
+```
 
 Tambien, puedes ver una guia mas completa [aquí](https://docs.google.com/document/d/1vGokwMXPQItZmTHZQbTO4qwj_SQymFhRS_nJmiH0K3w/edit?usp=sharing)
 
