:tada: rewrite article

--- a/_posts/news/2016-06-07-beta8.md
+++ b/_posts/news/2016-06-07-beta8.md
@@ -3,7 +3,7 @@ layout: post
 title: "Ionic2 release beta8"
 date: 2016-06-07
 tags: [release, ionic2]
-categories: ionic2
+categories: news
 author: nicobytes
 cover: "http://i.imgur.com/PWBxv0C.png"
 ---
