--- a/_posts/news/2016-11-06-ionic-2-rc-2.md
+++ b/_posts/news/2016-11-06-ionic-2-rc-2.md
@@ -57,6 +57,6 @@ Puedes un poco más de esto en [Ionic Build Process Updates](http://blog.ionic.i
 
 ## Demos actualizados
 
-En **ion-book** hemos creado la sección de [**demos**]({{site.urlbloglog}}//ionic2/){:target="_blank"} donde explicamos con código algunas integraciónes con un **repositorio enlazado**, así que ahora hemos actualizado algunos nuestros demos con este último release:
+En **ion-book** hemos creado la sección de [**demos**]({{site.urlblog}}//ionic2/){:target="_blank"} donde explicamos con código algunas integraciónes con un **repositorio enlazado**, así que ahora hemos actualizado algunos nuestros demos con este último release:
 
 {% include general/demos.html %}
