--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -11,7 +11,7 @@ versions:
     number: '2.0.0-rc2'
 ---
 
-> Los [**Observables**]({{site.urlbloglog}}/ionic2/observables-angular2){:target="_blank"} ahora son pieza clave en Ionic 2 y Angular 2, en artículos pasados vimos como consumir una [**REST API**]({{site.urlbloglog}}//ionic2/rest-api-with-ionic-2){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables con **ForkJoin**.
+> Los [**Observables**]({{site.urlblog}}/ionic2/observables-angular2){:target="_blank"} ahora son pieza clave en Ionic 2 y Angular 2, en artículos pasados vimos como consumir una [**REST API**]({{site.urlblog}}//ionic2/rest-api-with-ionic-2){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables con **ForkJoin**.
 
 <amp-img width="1280" height="740" layout="responsive" src="http://i.cubeupload.com/vrWyKl.png"></amp-img>
 
