--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -25,7 +25,7 @@ Y es una librería perfecta para construir aplicaciones con soporte offline, con
 
 # ¿Por qué mejora el performance?
 
-La mayoría de aplicaciones móviles se conecta a los datos con una [REST API]({{site.urlbloglog}}//ionic2/rest-api-with-ionic-2){:target="_blank"}, esto hace que cada vez que queramos crear, editar, leer y eliminar alguna información necesitamos estar haciendo peticiones constantes a nuestro Backend y eso está bien. Pero si ya tenemos la base de datos en local podremos responder mucho más rápido a los usuarios ya que los datos ya están en el dispositivo y solo si hay algún cambio PouchDB lo sincronizará.
+La mayoría de aplicaciones móviles se conecta a los datos con una [REST API]({{site.urlblog}}//ionic2/rest-api-with-ionic-2){:target="_blank"}, esto hace que cada vez que queramos crear, editar, leer y eliminar alguna información necesitamos estar haciendo peticiones constantes a nuestro Backend y eso está bien. Pero si ya tenemos la base de datos en local podremos responder mucho más rápido a los usuarios ya que los datos ya están en el dispositivo y solo si hay algún cambio PouchDB lo sincronizará.
 
 # ¿Por qué mejora la UX?
 
