:tada: overwrite article about ionic-natibe

--- a/_posts/ionic2/2016-06-05-ionic2.md
+++ b/_posts/ionic2/2016-06-05-ionic2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Comenzando con Ionic 2.0"
+title: "Comenzando con Ionic"
 date: 2016-06-05
 categories: ionic2
 tags: [tips, ionic2]
