--- a/_posts/news/2016-07-01-ionic-2-beta-10.md
+++ b/_posts/news/2016-07-01-ionic-2-beta-10.md
@@ -23,8 +23,9 @@ cover: "http://i.imgur.com/eUQv6nt.jpg"
 Se basa en un cambio en la estructura, sobre el componente `ion-content` que ahora tendrá el 100% del viewport y automáticamente tendrá el alto y scrolling si la página posee tabs, footer o header, pero si le agregamos a `ion-content` el atributo `fullscreen`, se agregara un bonita característica, cuando se haga scroll  se mostrar un efecto de glace en el header, mejor veamos:
 
 <p class="text-center">
-<blockquote class="imgur-embed-pub" lang="en" data-id="SnoUFBT" data-context="false"><a href="//imgur.com/SnoUFBT">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<amp-img width="376" height="666" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fionic-2-beta-10%2Fmay.-29-2017%2011-18-40.gif?alt=media&token=70f8d2e2-a503-45bb-be8a-e7a37c886ea9"></amp-img>
 </p>
+
 
 El código sería así:
 
