fixing https and dates

--- a/_posts/news/2016-06-17-beta9.md
+++ b/_posts/news/2016-06-17-beta9.md
@@ -20,9 +20,7 @@ Las características más relevantes los vemos en estos tres puntos agregadas
 
 Este componente ahora trae nuevas e increíbles posibilidades.
 
-<blockquote class="imgur-embed-pub" lang="en" data-id="CWpTae5">
-<a href="//imgur.com/CWpTae5">View post on imgur.com</a></blockquote>
-<script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<amp-img width="728" height="413" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fbeta9%2Fmay.-29-2017%2011-47-01.gif?alt=media&token=81479d41-5b74-4745-acaa-8890c9e7891e"></amp-img>
 
 Además que podemos poner opciones al ítem en la derecha o izquierda, algo increíble nuevo de este componente es poder es automatizar ciertas tareas con la acción `ionSwipe` .
 
