--- a/_posts/ionic2/2016-06-15-angular2.md
+++ b/_posts/ionic2/2016-06-15-angular2.md
@@ -5,10 +5,10 @@ tags: [tips, angular2, ionic2]
 date: 2016-06-15
 categories: ionic2
 author: carlosrojas
-cover: "http://i.imgur.com/ZiY7lT8.jpg"
+cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fangular2%2FZiY7lT8.jpg?alt=media&token=d36fcca3-838a-4725-8489-75e13f5dfbeb"
 ---
 
-<amp-img width="750" height="422" layout="responsive" src="http://i.imgur.com/ZiY7lT8.jpg"></amp-img>
+<amp-img width="750" height="422" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fangular2%2FZiY7lT8.jpg?alt=media&token=d36fcca3-838a-4725-8489-75e13f5dfbeb"></amp-img>
 
 Angular 2 es la nueva entrega de este increíble Framework para aplicaciones WEB que ahora se ha transformado en una plataforma con la cual puedes hacer aplicaciones WEB y Móviles.
 
@@ -26,9 +26,9 @@ Uno de los grandes avances en cuanto a la estructura de Angular 2 es que se elim
 
 El rendimiento es algo que se ha visto beneficiado con el nuevo diseño de Angular 2. El buen uso de los ciclos de CPU y el databinding unidireccional por defecto logran una excelente mejora que permite ahora ser una excelente opción cuando busquemos una solución para móviles y web.
 
-<amp-img width="692" height="554" layout="responsive" src="http://i.imgur.com/tIZCjWr.png"></amp-img>
+<amp-img width="692" height="554" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fangular2%2FtIZCjWr.png?alt=media&token=6b1d8fd2-2129-45d1-91c1-44f1f4a11977"></amp-img>
 
-En el siguiente grafico vemos un grafico de rendimiento presentado en el Angular Connect hace un tiempo (https://www.youtube.com/watch?v=UxjgUjVpe24).
+En el siguiente grafico vemos un grafico de rendimiento presentado en el Angular Connect hace un tiempo [https://www.youtube.com/watch?v=UxjgUjVpe24](https://www.youtube.com/watch?v=UxjgUjVpe24).
 
 ## Inyección de dependencias.
 
