Solving issues from Google Console Search

--- a/_posts/news/2017-03-08-ionic-2-2-0-out.md
+++ b/_posts/news/2017-03-08-ionic-2-2-0-out.md
@@ -40,7 +40,7 @@ El atributo `main` es solo una forma para que Split Pane sepa cual va a ser el c
 
 mas que eso, Split Pane deberia funcionar por si solo.
 
-<amp-img width="670" height="402" layout="" src="http://blog.ionic.io/wp-content/uploads/2017/03/split-pane-2.gif"></amp-img>
+<amp-img width="670" height="402" layout="responsive" src="http://blog.ionic.io/wp-content/uploads/2017/03/split-pane-2.gif"></amp-img>
 
 Por defecto el Split Pane estara oculto hasta que el viewport alcance el punto de quiebre `md`, el cual es `(min-width: 768px)`.
 
@@ -59,7 +59,7 @@ Hay muchos ajustes que puedes realizar dale un vistazo a la [documentación](htt
 
 Mientras mostrar y esconder contenido en el lateral es cool, vamos un poco mas alla y se pueden agregar navegación anidada al contenido lateral.
 
-<amp-img width="670" height="502" layout="" src="http://blog.ionic.io/wp-content/uploads/2017/03/split-pane-nav.gif"></amp-img>
+<amp-img width="670" height="502" layout="responsive" src="http://blog.ionic.io/wp-content/uploads/2017/03/split-pane-nav.gif"></amp-img>
 
 Cada componente tiene su propio `ion-nav` y se pude navegar independientemente de los otros.
 
