--- a/_posts/news/2017-04-05-ionic-v-3.md
+++ b/_posts/news/2017-04-05-ionic-v-3.md
@@ -16,7 +16,7 @@ Esto no fue del todo una sorpresa, hace unos dias vimos un [Post](https://forum.
 
 Bueno, pero que viene nuevo con Ionic V.3 ? y debo volver a Aprender todo de Nuevo ?
 
-<amp-img width="463" height="349" layout="" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-04-05-ionic-v-3%2Fjoker-mind-loss-anuncian-ionic-v3-todo-el-mundo-pierde-la-cabeza.jpg?alt=media&token=481c7fe4-37a5-448e-aaa0-719e975651be"></amp-img> 
+<amp-img width="463" height="349" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-04-05-ionic-v-3%2Fjoker-mind-loss-anuncian-ionic-v3-todo-el-mundo-pierde-la-cabeza.jpg?alt=media&token=481c7fe4-37a5-448e-aaa0-719e975651be"></amp-img> 
 
 ## Mi App construida con Ionic 2 dejara de funcionar ?
 
