:tada: articles: rewrite article about 'angularfire and ionic'

--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -5,19 +5,16 @@ date: 2016-08-09
 tags: [angular2, tips]
 categories: tips
 author: nicobytes
-cover: "http://i.cubeupload.com/vrWyKl.png"
-versions:
-  - title: 'ionic'
-    number: '2.0.0-rc2'
+cover: "/images/posts/tips/2016-08-09-fork-join/cover.png"
 ---
 
-> Los [**Observables**]({{site.urlblog}}/ionic2/observables-angular2){:target="_blank"} ahora son pieza clave en Ionic 2 y Angular 2, en artículos pasados vimos como consumir una [**REST API**]({{site.urlblog}}//ionic2/rest-api-with-ionic-2){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables con **ForkJoin**.
+> Los [**Observables**]({{site.urlblog}}/ionic2/observables-angular){:target="_blank"} son pieza clave en Ionic y Angular, en artículos pasados vimos como consumir una [**REST API**]({{site.urlblog}}//ionic2/rest-api-with-ionic){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables con **ForkJoin**.
 
-<amp-img width="1280" height="740" layout="responsive" src="http://i.cubeupload.com/vrWyKl.png"></amp-img>
+<amp-img width="1280" height="740" layout="responsive" src="/images/posts/tips/2016-08-09-fork-join/cover.png"></amp-img>
 
 # ¿Qué son las peticiones en paralelo?
 
-Hacer peticiones en paralelo, puede llegar a un caso muy usual cuando nos conectamos a una **REST API** y nos sirve para ejecutar más  de una petición al mismo tiempo y tener los resultados de cada una por separado de forma síncrona.
+Hacer peticiones en paralelo, puede llegar a un caso muy usual cuando nos conectamos a una **API REST** y nos sirve para ejecutar más  de una petición al mismo tiempo y tener los resultados de cada una por separado de forma síncrona.
 
 Un ejemplo puede ser estas dos peticiones:
 
@@ -88,14 +85,14 @@ Tenemos dos peticiones donde cada evento tiene relacionado un speaker, pero en n
 
 # Solución 1 (esto seria lo mejor):
 
-Esta situación la tendríamos ya solucionada si nuestra **REST API** ya nos retorna la solicitud con la relación que nosotros necesitamos,  pero no siempre tenemos en nuestras manos el desarrollo de la REST API y la implementación puede tardar (depende del caso).
+Esta situación la tendríamos ya solucionada si nuestra **API REST** ya nos retorna la solicitud con la relación que nosotros necesitamos,  pero no siempre tenemos en nuestras manos el desarrollo de la API REST y la implementación puede tardar (depende del caso).
 
 # Solución 2:
 
 Ahora si no tenemos control del backend y de igual manera nos toca relacionar los datos podemos dejar este trabajo del lado del cliente, para esto necesitamos los métodos individuales de cada solicitud `getEvents` y `getSpeakers` y además una función que se encargue de relacionar los datos `join`. Existen dos maneras de abordar este problema y una es ejecutar una a una las peticiones (*sin ForkJoin*) y la segunda es ejecutar en paralelo las peticiones y recibir las respuestas al mismo tiempo (*con ForkJoin*).
 
 <br/>
-<amp-img width="1000" height="300" layout="responsive" src="http://i.cubeupload.com/cjsilg.jpg"></amp-img>
+<amp-img width="1000" height="300" layout="responsive" src="/images/posts/tips/2016-08-09-fork-join/screen.jpg"></amp-img>
 <br/>
 
 Como vemos usando **ForkJoin** podemos ejecutar varias peticiones en paralelo y recibirlas de forma ordenada la respuesta de cada una. Lo cual hace que al usar **ForkJoin** podamos tener un código más **mantenible** y **escalable**.
@@ -186,6 +183,63 @@ export class TestService {
     return this.http.get('data/events.json')
     .map(res => res.json())
     .toPromise();
+  }
+
+  getSpeakers(){
+    return this.http.get('data/speakers.json')
+    .map(res => res.json())
+    .toPromise();
+  }
+
+  getEventsWithSpeaker(){
+    return Observable.forkJoin(
+      this.getEvents(),
+      this.getSpeakers()
+    )
+    .map(res => this.join( res[0], res[1] ))
+    .toPromise();
+  }
+
+  join(events, speakers){
+    return events.map(event => {
+      return speakers
+      .filter(speaker => speaker.id == event.speaker_id)
+      .map(speaker => {
+        return {
+          id: event.id,
+          title: event.title,
+          date: event.date,
+          speaker_id: event.speaker_id,
+          speaker: speaker
+        }
+      })
+    }).reduce((a,b) =>{
+      return a.concat(b);
+    }, []);
+    
+  }
+
+}
+
+```
+
+La función *ForJoin* sirve tanto para ejecutar varias promesas al mismo tiempo como para *Observables*, con observables:
+
+```ts
+import { Injectable } from '@angular/core';
+import { Http } from '@angular/http';
+import { Observable } from 'rxjs/Observable';
+import 'rxjs/add/observable/forkJoin';
+import 'rxjs/add/operator/map';
+
+@Injectable()
+export class TestService {
+
+  constructor(private http: Http) {}
+
+  getEvents(){
+    return this.http.get('data/events.json')
+    .map(res => res.json())
   }
 
   getSpeakers(){
