--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -1,20 +1,33 @@
 ---
 layout: post
-title: "Peticiones en paralelo con ForkJoin"
+title: "Peticiones en paralelo con RXJS (ForkJoin)"
 date: 2016-08-09
 tags: [angular2, tips]
 categories: tips
 author: nicobytes
-cover: "/images/posts/tips/2016-08-09-fork-join/cover.png"
+repo: https://github.com/ion-book/demo114
+remember: true
+cover: "/images/posts/tips/2016-08-09-fork-join/cover.jpg"
+versions:
+  - title: 'ionic'
+    number: '3.3.0'
+  - title: 'ionic-app-scripts'
+    number: '1.3.7'
+  - title: 'cordova-cli'
+    number: '7.0.0'
+  - title: 'ionic-cli'
+    number: '3.4.0'
 ---
 
 > Los [**Observables**]({{site.urlblog}}/ionic2/observables-angular){:target="_blank"} son pieza clave en Ionic y Angular, en artículos pasados vimos como consumir una [**REST API**]({{site.urlblog}}//ionic2/rest-api-with-ionic){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables con **ForkJoin**.
 
-<amp-img width="1280" height="740" layout="responsive" src="/images/posts/tips/2016-08-09-fork-join/cover.png"></amp-img>
+<amp-img width="1024" height="512" layout="responsive" src="/images/posts/tips/2016-08-09-fork-join/cover.jpg"></amp-img>
 
 # ¿Qué son las peticiones en paralelo?
 
 Hacer peticiones en paralelo, puede llegar a un caso muy usual cuando nos conectamos a una **API REST** y nos sirve para ejecutar más  de una petición al mismo tiempo y tener los resultados de cada una por separado de forma síncrona.
+
+<amp-img width="1280" height="740" layout="responsive" src="/images/posts/tips/2016-08-09-fork-join/screen1.png"></amp-img>
 
 Un ejemplo puede ser estas dos peticiones:
 
@@ -108,7 +121,7 @@ import 'rxjs/add/operator/map';
 import 'rxjs/add/operator/toPromise';
 
 @Injectable()
-export class TestService {
+export class TestProvider {
 
   events: any[] = [];
   speakers:  any[] = [];
@@ -166,29 +179,31 @@ export class TestService {
 
 ## Con **ForkJoin**:
 
+La función **ForJoin** sirve tanto para ejecutar varias promesas al mismo tiempo como para **Observables**, en este caso vamos a usar el **Observable** que retorna un petición GET de Angular:
+
 ```ts
 import { Injectable } from '@angular/core';
 import { Http } from '@angular/http';
 import { Observable } from 'rxjs/Observable';
 import 'rxjs/add/observable/forkJoin';
 import 'rxjs/add/operator/map';
-import 'rxjs/add/operator/toPromise';
 
 @Injectable()
-export class TestService {
+export class TestProvider {
+
+  events: any[] = [];
+  speakers:  any[] = [];
 
   constructor(private http: Http) {}
 
   getEvents(){
-    return this.http.get('data/events.json')
+    return this.http.get('assets/data/events.json')
     .map(res => res.json())
-    .toPromise();
   }
 
   getSpeakers(){
-    return this.http.get('data/speakers.json')
+    return this.http.get('assets/data/speakers.json')
     .map(res => res.json())
-    .toPromise();
   }
 
   getEventsWithSpeaker(){
@@ -197,7 +212,6 @@ export class TestService {
       this.getSpeakers()
     )
     .map(res => this.join( res[0], res[1] ))
-    .toPromise();
   }
 
   join(events, speakers){
@@ -220,62 +234,73 @@ export class TestService {
   }
 
 }
-
 ```
 
-La función *ForJoin* sirve tanto para ejecutar varias promesas al mismo tiempo como para *Observables*, con observables:
+Vamos a usar esta ultima version para implementarla como `provider` en la pagína `HomePage`:
 
 ```ts
-import { Injectable } from '@angular/core';
-import { Http } from '@angular/http';
-import { Observable } from 'rxjs/Observable';
-import 'rxjs/add/observable/forkJoin';
-import 'rxjs/add/operator/map';
+import { Component } from '@angular/core';
+import { IonicPage, NavController, NavParams } from 'ionic-angular';
 
-@Injectable()
-export class TestService {
+import { TestProvider } from '../../providers/test/test';
 
-  constructor(private http: Http) {}
+@IonicPage()
+@Component({
+  selector: 'page-home',
+  templateUrl: 'home.html',
+})
+export class HomePage {
 
-  getEvents(){
-    return this.http.get('data/events.json')
-    .map(res => res.json())
+  events: any[] = [];
+
+  constructor(
+    public navCtrl: NavController,
+    public navParams: NavParams,
+    private testProvider: TestProvider
+  ) {
   }
 
-  getSpeakers(){
-    return this.http.get('data/speakers.json')
-    .map(res => res.json())
-    .toPromise();
-  }
-
-  getEventsWithSpeaker(){
-    return Observable.forkJoin(
-      this.getEvents(),
-      this.getSpeakers()
-    )
-    .map(res => this.join( res[0], res[1] ))
-    .toPromise();
-  }
-
-  join(events, speakers){
-    return events.map(event => {
-      return speakers
-      .filter(speaker => speaker.id == event.speaker_id)
-      .map(speaker => {
-        return {
-          id: event.id,
-          title: event.title,
-          date: event.date,
-          speaker_id: event.speaker_id,
-          speaker: speaker
-        }
-      })
-    }).reduce((a,b) =>{
-      return a.concat(b);
-    }, []);
-    
+  ionViewDidLoad() {
+    this.testProvider.getEventsWithSpeaker()
+    .subscribe(events =>{
+      this.events = events;
+    }, error=>{
+      console.log( error );
+    })
   }
 
 }
-
 ```
+
+Y nuestro `home.html`, quedara así:
+
+```html
+{% raw %}
+<ion-header>
+  <ion-navbar color="primary">
+    <ion-title>Demo114</ion-title>
+  </ion-navbar>
+</ion-header>
+<ion-content>
+    <ion-list>
+      <ion-item *ngFor="let event of events">
+        <h2>{{ event.title }}</h2>
+        <p>Date {{ event.date | date }}</p>
+        <p>Speaker: {{ event.speaker.name }}</p>
+        <p>Job: {{ event.speaker.job }}</p>
+      </ion-item>
+    </ion-list>
+</ion-content>
+{% endraw %}
+```
+
+
+## Resultado:
+
+<div class="row">
+  <div class="col col-100 col-md-33 offset-md-33 col-lg-33 offset-lg-33">
+    <amp-img width="320" height="639" layout="responsive" src="/images/posts/tips/2016-08-09-fork-join/result.png"></amp-img>
+  </div>
+</div>
+<br/>
+
