--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -50,6 +50,8 @@ Un ejemplo puede ser estas dos peticiones:
 ]
 ```
 
+{% include blog/subscribe.html %}
+
 Y `api.domain.com/api/v2/speakers` que responde lo siguiente:
 
 ```json
