:memo: articles: rewrite article about 'Fundamentos de SASS'

--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -100,6 +100,8 @@ Tenemos dos peticiones donde cada evento tiene relacionado un speaker, pero en n
 
 Esta situación la tendríamos ya solucionada si nuestra **API REST** ya nos retorna la solicitud con la relación que nosotros necesitamos,  pero no siempre tenemos en nuestras manos el desarrollo de la API REST y la implementación puede tardar (depende del caso).
 
+{% include blog/subscribe.html %}
+
 # Solución 2:
 
 Ahora si no tenemos control del backend y de igual manera nos toca relacionar los datos podemos dejar este trabajo del lado del cliente, para esto necesitamos los métodos individuales de cada solicitud `getEvents` y `getSpeakers` y además una función que se encargue de relacionar los datos `join`. Existen dos maneras de abordar este problema y una es ejecutar una a una las peticiones (*sin ForkJoin*) y la segunda es ejecutar en paralelo las peticiones y recibir las respuestas al mismo tiempo (*con ForkJoin*).
