--- a/_posts/ionic2/2016-06-05-ionic2.md
+++ b/_posts/ionic2/2016-06-05-ionic2.md
@@ -12,8 +12,7 @@ cover: "http://i.imgur.com/ZYv3zLt.png"
 
 Hola a todos!!!
 
-Ionic 2 ha llegado a su version [beta 7](https://github.com/driftyco/ionic/blob/2.0/CHANGELOG.md#angular-update-to-200-rc1) y creo que es buen momento para empezar a hablar sobre Ionic 2, lo primero que debemos
-entender es que Ionic 1 funciona con Angular 1 y Ionic 2 funciona con Angular 2, esto es una grán diferencia debido a la misma
+Ionic 2 ha llegado a su version [beta 7](https://github.com/driftyco/ionic/blob/2.0/CHANGELOG.md#angular-update-to-200-rc1) y creo que es buen momento para empezar a hablar sobre Ionic 2, lo primero que debemos entender es que Ionic 1 funciona con Angular 1 y Ionic 2 funciona con Angular 2, esto es una grán diferencia debido a la misma
 naturaleza de Angular pero trataremos de darlo a conocer en pequeñas partes que no seán tan dificiles de entender, entonces, comencemos.
 
 1. Instalar Ionic 2 y Cordova.
