:memo: articles: organize article about 'Firebase 3 + Ionic'

--- a/_posts/news/2016-07-22-firebase-3.md
+++ b/_posts/news/2016-07-22-firebase-3.md
@@ -3,14 +3,14 @@ layout: post
 title: "Firebase 3 + Ionic"
 tags: [firebase, ionic2]
 date: 2016-07-22
-categories: ionic2
+categories: news
 author: carlosrojas
-cover: "http://i.imgur.com/5mTwi1e.jpg"
+cover: "/images/posts/ionic2/2016-07-15-ionic-firebase/cover.jpg"
 ---
 
-<amp-img width="800" height="292" layout="responsive" src="http://i.imgur.com/5mTwi1e.jpg"></amp-img>
+<amp-img width="1280" height="720" layout="responsive" src="/images/posts/ionic2/2016-07-15-ionic-firebase/cover.jpg"></amp-img>
 
-Hola a todos!!!
+!Hola a todos!
 
 Muchos han escuchado sobre Firebase como una opción para no preocuparse sobre las dificiles configuraciones en el
 lado del Servidor. Adicionalmente, siempre ha brillado por su capacidad de Tiempo Real ( Apps como Uber o Messenger ).
