--- a/_posts/ionic2/2016-12-29-clase-1-feed.md
+++ b/_posts/ionic2/2016-12-29-clase-1-feed.md
@@ -1,70 +1,80 @@
 ---
 layout: post
-title: "Clase 1 - Creando una app en Ionic 2."
+title: "Clase 1 - Creando una app en Ionic"
 date: 2016-12-29
 tags: [class, ionic2]
 categories: ionic2
 author: carlosrojas
-cover: "https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f"
+cover: "/images/posts/ionic2/2016-12-29-clase-1-feed/cover.png"
+video: true
 versions:
   - title: 'ionic'
-    number: '2.0.0-rc.3'
-  - title: 'ionic-native'
-    number: '2.2.3'
+    number: '3.3.0'
+  - title: 'ionic-app-scripts'
+    number: '1.3.7'
+  - title: 'cordova-cli'
+    number: '7.0.0'
+  - title: 'ionic-cli'
+    number: '3.4.0'
 ---
 
-<amp-img width="1024" height="512" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f"></amp-img>
+<amp-img width="1024" height="512" layout="responsive" src="/images/posts/ionic2/2016-12-29-clase-1-feed/cover.png"></amp-img>
 
-Hola!!! y bienvenido a esta serie de lecciones que te enseñaran como hacer una app en Ionic 2.
+!Hola! y bienvenido a esta serie de lecciones que te enseñaran como hacer una app en Ionic.
 
-Primero que todo quiero hacer una distincion entre Ionic 1 y Ionic 2
+Primero que todo quiero hacer una distincion entre Ionic 1 y el nuevo Ionic.
 
-Si es tu primera vez explorando Hybrid Apps quizas puedas estar un poco confundido porque las personas estan hablando sobre Ionic 1 y Ionic 2
+Si es tu primera vez explorando aplicaciones híbridas quizas puedas estar un poco confundido porque las personas estan hablando sobre Ionic y Ionic 2 o 3.
 <!--summary-->
 
-<h2>Son similares, es lo mismo?</h2>
+## ¿Son similares? ¿Es lo mismo?
 
-Bueno, basicamente las dos versiones de Ionic comparten la ideologia de usar html/js/css para construir Apps moviles. Estas dos versiones usan el mismo CLI, entonces,
-tu puedes usar el mismo comando para construir, Servir y Desplegar. pero son diferentes principalmente porque Ionic 1 usa Angular 1.x.x y Ionic 2 usa Angular 2.x.x y estas dos tecnologias solo comparten el nombre :)
+Bueno, basicamente las dos versiones de Ionic comparten la ideología de usar html/js/css para construir Apps moviles. Estas dos versiones usan el mismo CLI, entonces, tu puedes usar el mismo comando para construir, servir y desplegar. Pero son diferentes principalmente porque Ionic 1 usa Angular 1.x.x, Ionic 2 usa Angular 2.x.x y Ionic 3 usa Angular 4.x.x y estas dos tecnologías solo comparten el nombre :)
 
-Ok. Habiendo dicho esto vamos a enfocar esta serie en Ionic 2.
+Es importante aclarar que la migración de Ionic 1 a Ionic 2 es compleja pero de ahora en adelante Ionic 2, Ionic 3 y las versiones que siguen van a ser retrocompatibles. Esto quiero decir que no hay por que preocuparse por las nuevas versiones y cada nueva versión traerá nuevas características y con migraciones sencillas. En resumen *‘es solo Ionic’*.
 
-<h2>Instalando Ionic.</h2>
+<amp-youtube width="560" 
+            height="315"
+            layout="responsive"
+            data-videoid="vztUMbRARoo"></amp-youtube>
 
-<h3>Instalando Node y Cordova</h3>
+Ok. Habiendo dicho esto vamos a enfocar esta serie en Ionic.
+
+## Instalando Ionic
+
+### Instalando Node y Cordova
 
 El CLI de Ionic esta instalado sobre Node e Ionic es construido sobre Cordova, Asi que vas a necesitar [ Descargar e instalar una versión reciente de Node desde acá ](https://nodejs.org/).
 
-Una vez tienes Node.js instalado, yu podras ser capaz de acceder al administrador de paquetes de node o npm a traves del comando.
+Una vez tienes Node.js instalado, tu podrás ser capaz de acceder al administrador de paquetes de node o npm a traves del comando.
 
 ```
-npm install -g ionic cordova
+npm install -g ionic@latest cordova@latest
 ```
 
-*Quizas puedas necesitar ```` sudo ```` para instalar globalmente*
+*Quizas puedas necesitar `sudo` para instalar globalmente*
 
-<h3>Instalando el Android SDK</h3>
+### Instalando el Android SDK
 
-Vas a necesitar Android instalado en tu maquina para que Ionic se ejecute correctamente. Por favor sigues estas guias.
+Vas a necesitar Android instalado en tu máquina para que Ionic se ejecute correctamente. Por favor sigues estas guias.
 
-[Mac OS X](http://ionicframework.com/docs/v2/resources/platform-setup/mac-setup.html)
+[Mac OS X](http://ionicframework.com/docs/developer-resources/platform-setup/mac-setup.html)
 
-[Windows](http://ionicframework.com/docs/v2/resources/platform-setup/windows-setup.html)
+[Windows](http://ionicframework.com/docs/developer-resources/platform-setup/windows-setup.html)
 
-
-<h3>Instalando XCODE solo para Mac OS X</h3>
+### Instalando XCODE solo para Mac OS X
 
 Si tienes Mac, tu vas a necesitar de Xcode CLI Tools. Sigue el enlace e instala.
 
 [Descarga XCODE](https://developer.apple.com/xcode/)
 
-<h3>Creando tu primera App en Ionic 2. Yeeeeih!!</h3>
+### Creando tu primera App en Ionic. Yeeeeih!!
 
 Ok, ahora necesitamos escribir este comando:
 
 ```
-ionic start myFirstApp --v2
-````
+ionic start myFirstApp
+```
 
 Ok, ahora si todo sale bien, tu puedes ver en la ubicacion de tu directorio una nueva carpeta llamada *"myFirstApp"* y en tu terminal CLI. Algo como esto:
 
@@ -77,7 +87,7 @@ Run your app in the browser (great for initial development):
   ionic serve
 
 Run on a device or simulator:
-  ionic run ios[android,browser]
+  ionic cordova run ios[android,browser]
 
 Test and share your app on device with Ionic View:
   http://view.ionic.io
@@ -89,7 +99,7 @@ New! Add push notifications, live app updates, and more
 with Ionic Cloud!
   https://apps.ionic.io/signup
 
-````
+```
 
 Ahora nos vamos a ubicar en la carpeta del proyecto.
 
@@ -107,7 +117,7 @@ ionic serve
 
 vas a ver algo como esto en tu navegador:
 
-<amp-img width="858" height="495" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Screen%20Shot%202016-11-22%20at%2012.53.40%20PM.png?alt=media&token=d35c067a-7d22-4381-bee8-646a4198aa5f"></amp-img>
+<amp-img width="858" height="495" layout="responsive" src="/images/posts/ionic2/2016-12-29-clase-1-feed/screen1.png"></amp-img>
 
 Si ves algo asi en tu pantalla estas muy bien :)
 
@@ -115,35 +125,43 @@ Ahora, yo personalmente uso Chrome Dev Tools para trabajar en mis proyectos.
 
 Para usar esto desde tu navegador tu vas a necesitar Click Derecho en tu Raton. y seleccionar "Inspeccionar".
 
-<amp-img width="858" height="442" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Screen%20Shot%202016-11-22%20at%2012.55.55%20PM%20(1).png?alt=media&token=df35d032-326c-4940-992d-1ded976ec9c7"></amp-img>
+<amp-img width="858" height="442" layout="responsive" src="/images/posts/ionic2/2016-12-29-clase-1-feed/screen2.png"></amp-img>
 
-<amp-img width="858" height="438" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2FScreen%20Shot%202016-11-22%20at%2012.59.39%20PM%20(1).png?alt=media&token=196e5d56-456d-4f14-a88c-0afcd2fd3c2b"></amp-img>
+<amp-img width="858" height="438" layout="responsive" src="/images/posts/ionic2/2016-12-29-clase-1-feed/screen3.png"></amp-img>
 
 Presione en los 3 puntos en la esquina y seleccione "Dock to right".
 
-<amp-img width="318" height="318" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2FScreen%20Shot%202016-11-22%20at%201.02.16%20PM.png?alt=media&token=6e6a96ae-99c8-4013-9e9c-a24ac11c0993"></amp-img>
+<div class="row">
+  <div class="col col-100 col-md-33 col-lg-33 offset-md-33 offset-lg-33">
+    <amp-img width="318" height="318" layout="responsive" src="/images/posts/ionic2/2016-12-29-clase-1-feed/screen4.png"></amp-img>
+  </div>
+</div>
 
 y luego, presione en la imagen del dispositivo pequeño.
 
-<amp-img width="300" height="308" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2FScreen%20Shot%202016-11-22%20at%201.05.01%20PM%20(1).png?alt=media&token=6818defd-84c2-4fcb-90a3-56739d1b5525"></amp-img>
+<div class="row">
+  <div class="col col-100 col-md-33 col-lg-33 offset-md-33 offset-lg-33">
+    <amp-img width="318" height="318" layout="responsive" src="/images/posts/ionic2/2016-12-29-clase-1-feed/screen5.png"></amp-img>
+  </div>
+</div>
 
 Ahora veras algo como esto:
 
-<amp-img width="858" height="495" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2FScreen%20Shot%202016-11-22%20at%201.11.37%20PM%20(1).png?alt=media&token=e4386080-b652-4afb-937d-11896518404a"></amp-img>
+<amp-img width="858" height="495" layout="responsive" src="/images/posts/ionic2/2016-12-29-clase-1-feed/screen6.png"></amp-img>
 
-Perfecto!! ahora, nosostros estamos casi listo.
+!Perfecto! ahora, nosostros estamos casi listo.
 
-Adicionalmente, vas a necesitar de un editor. Tu puede encontrar [buenas opciones aquí](http://ionicframework.com/docs/v2/resources/editors_and_ides/).
+Adicionalmente, vas a necesitar de un editor. Tu puede encontrar [buenas opciones aquí](http://ionicframework.com/docs/developer-resources/editors_and_ides/).
 
 Yo estoy usando Visual Studio Code.
 
-Entonces, cuando tu elijas tu editor vas a necesitar abrir el proyecto ahí:
+Entonces, cuando tú elijas tu editor vas a necesitar abrir el proyecto ahí:
 
 <amp-img width="858" height="643" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2FScreen%20Shot%202016-11-22%20at%201.19.08%20PM.png?alt=media&token=2a8c983c-1d33-4fb3-a5f3-1a67c0d6b1d3"></amp-img>
 
-Cool, que sigue?
+Cool, ¿Qué sigue?
 
-Vamos a crear una app que va a tener estas caracteristicas:
+Vamos a crear una app que va a tener estas características:
 
 * Vas a leer noticias desde un Feed (RSS).
 * Puedes registrar usuarios.
@@ -152,9 +170,6 @@ Vamos a crear una app que va a tener estas caracteristicas:
 
 Listo eso es todo por ahora. pero mientras tanto puedes leer los siguientes enlaces :)
 
-[What are RSS feeds?](http://j.mp/2gyce3x)
-
-[Angular 2 Series](http://j.mp/1zaQGbP)
-
-[Ionic Cloud Services](http://j.mp/2gylULG)
+* [What are RSS feeds?](https://www.lifewire.com/rss-101-3482781)
+* [Ionic Cloud Services](https://docs.ionic.io/services/)
 
