--- a/_posts/ionic2/2016-12-29-clase-1-feed.md
+++ b/_posts/ionic2/2016-12-29-clase-1-feed.md
@@ -121,6 +121,8 @@ vas a ver algo como esto en tu navegador:
 
 Si ves algo asi en tu pantalla estas muy bien :)
 
+{% include blog/subscribe.html %}
+
 Ahora, yo personalmente uso Chrome Dev Tools para trabajar en mis proyectos.
 
 Para usar esto desde tu navegador tu vas a necesitar Click Derecho en tu Raton. y seleccionar "Inspeccionar".
