--- a/_posts/hechoen/2017-06-21-Untappd.md
+++ b/_posts/hechoen/2017-06-21-Untappd.md
@@ -5,39 +5,34 @@ date: 2017-06-23
 categories: hechoen
 tags: [ui]
 author: carlosrojas
-cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-16-shopit%2FShipt%20headquarters_Birmingham%20(1).png?alt=media&token=ff65e81d-ae39-439c-888f-100116066aae"
-draft: yes
+cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-21-Untappd%2Funtappd-ionic-header.jpg?alt=media&token=de3ca0f2-600b-4508-af3c-0eebd182981d"
 ---
 
-<amp-img width="1280" height="660" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-16-shopit%2FShipt%20headquarters_Birmingham%20(1).png?alt=media&token=ff65e81d-ae39-439c-888f-100116066aae"></amp-img>
+<amp-img width="1280" height="660" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-21-Untappd%2Funtappd-ionic-header.jpg?alt=media&token=de3ca0f2-600b-4508-af3c-0eebd182981d"></amp-img>
 
 ¡Hola Ioniers!
 
-Una de las preguntas que mas recibimos en nuestras Charlas, es ¿ Cuales Apps estan hechas en Ionic ? para resolver esto hemos decidido crear esta nueva categoria en la cual les contaremos acerca de Apps que estan construidos en Ionic y que ademas atienden a grandes cantidades de usuarios.
+En esta oportunidad traemos a [Untappd](https://untappd.com/) una Startup la cual ha recibido dos rondas de inversión para un total de [$6.6M USD](https://www.crunchbase.com/organization/untappd#/entity).
 
-En esta oportunidad traemos a [Shipt](https://www.shipt.com/) una Startup la cual recientemente fue noticia ya que levanto una nueva ronda de [$40M USD](https://techcrunch.com/2017/06/06/alabama-based-shipt-raises-40-million-to-challenge-dominant-grocery-delivery-startups/), es decir, han confiado en Ionic su negocio que es principalmente Movil.
+## Que es Untappd ?
 
-## Que es Shipt ?
-
-Es un servicio que te permite comprar comestibles frescos on demand, directamente de tiendas cercanas a tu hogar.
+Es una App que te permite encontrar Cerveza para probar, ademas te deja guardar cuales ya has probado y te deja ver que dicen los demas sobre esas Cervezas.
 
 ## Como es la App ?
 
-Esta consiste en dos Apps independientes una para los compradores y otra para los repartidores.
+La app consiste en un registro por correo electronico o por Facebook. En su interior tienen varias interfaces con listas, Maps y muchos Modals.
 
 {% include blog/subscribe.html %}
 
-## UI Compradores
+## UI
 
-<amp-img width="1406" height="500" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-16-shopit%2FBuyer.png?alt=media&token=c7461ae2-74d2-4bc0-8a9b-89f378f6f75b"></amp-img>
+<amp-img width="1406" height="500" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-21-Untappd%2FUI.png?alt=media&token=ea68d56f-dd31-4d7d-93a4-c1a5849a5f84"></amp-img>
 
-Como vemos en Android han hecho una gran personalización, ademas, de conservar la simplicidad para el usuario.
+Como vemos la App esta bien trabajada con CSS y da una apariencia atractiva. Ademas han personalizado la mayoria de los componentes que trae Ionic.
 
-## UI Repartidores
+## Usuarios.
 
-<amp-img width="843" height="500" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-16-shopit%2FShopper.png?alt=media&token=708a69ea-d5be-43fb-b434-ccc5b15353b0"></amp-img>
-
-Aca vemos que se mantiene la linea de diseño simple, con las herramientas necesarias para que los servicios lleguen a tiempo.
+Si ingresas al [Google Play Store](https://play.google.com/store/apps/details?id=com.untappdllc.app&hl=en) se puede observar que tiene más de 1.000.000 de usuarios lo cual muestra que podemos mantener nuestra App con Ionic a pesar de manejar estos numeros.
 
 Bueno, ya tienes una nueva razón para preferir Ionic en tu proximo proyecto. ¿Que tal te ha parecido esta Startup?
 
