:fix: bug in hechoen

--- a/_posts/hechoen/2017-06-16-shopit.md
+++ b/_posts/hechoen/2017-06-16-shopit.md
@@ -3,7 +3,7 @@ layout: post
 title: "Shipt: Comestibles on Demand."
 date: 2017-06-16
 categories: hechoen
-tags: [ui]
+tags: [build]
 author: carlosrojas
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-16-shopit%2FShipt%20headquarters_Birmingham%20(1).png?alt=media&token=ff65e81d-ae39-439c-888f-100116066aae"
 ---
