:bug: articles: fix errors in articles

--- a/_posts/hechoen/2017-06-21-Untappd.md
+++ b/_posts/hechoen/2017-06-21-Untappd.md
@@ -5,20 +5,20 @@ date: 2017-06-23
 categories: hechoen
 tags: [build]
 author: carlosrojas
-cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-21-Untappd%2Funtappd-ionic-header.jpg?alt=media&token=de3ca0f2-600b-4508-af3c-0eebd182981d"
+cover: "/images/posts/hechoen/2017-06-21-untappd/cover.jpg"
 ---
 
-<amp-img width="1280" height="660" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-21-Untappd%2Funtappd-ionic-header.jpg?alt=media&token=de3ca0f2-600b-4508-af3c-0eebd182981d"></amp-img>
+<amp-img width="1280" height="660" layout="responsive" src="/images/posts/hechoen/2017-06-21-untappd/cover.jpg"></amp-img>
 
 ¡Hola Ioniers!
 
 En esta oportunidad traemos a [Untappd](https://untappd.com/) una Startup la cual ha recibido dos rondas de inversión para un total de [$6.6M USD](https://www.crunchbase.com/organization/untappd#/entity).
 
-## Que es Untappd ?
+## ¿Qué es Untappd ?
 
 Es una App que te permite encontrar Cerveza para probar, ademas te deja guardar cuales ya has probado y te deja ver que dicen los demas sobre esas Cervezas.
 
-## Como es la App ?
+## ¿Cómo es la App ?
 
 La app consiste en un registro por correo electronico o por Facebook. En su interior tienen varias interfaces con listas, Maps y muchos Modals.
 
@@ -26,15 +26,15 @@ La app consiste en un registro por correo electronico o por Facebook. En su inte
 
 ## UI
 
-<amp-img width="1406" height="500" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-06-21-Untappd%2FUI.png?alt=media&token=ea68d56f-dd31-4d7d-93a4-c1a5849a5f84"></amp-img>
+<amp-img width="2880" height="1280" layout="responsive" src="/images/posts/hechoen/2017-06-21-untappd/ui.png"></amp-img>
 
 Como vemos la App esta bien trabajada con CSS y da una apariencia atractiva. Ademas han personalizado la mayoria de los componentes que trae Ionic.
 
 ## Usuarios.
 
-Si ingresas al [Google Play Store](https://play.google.com/store/apps/details?id=com.untappdllc.app&hl=en) se puede observar que tiene más de 1.000.000 de usuarios lo cual muestra que podemos mantener nuestra App con Ionic a pesar de manejar estos numeros.
+Si ingresas al [Google Play Store](https://play.google.com/store/apps/details?id=com.untappdllc.app&hl=en) se puede observar que tiene más de 1.000.000 de usuarios lo cual muestra que podemos mantener nuestra App con Ionic a pesar de manejar estos números.
 
-Bueno, ya tienes una nueva razón para preferir Ionic en tu proximo proyecto. ¿Que tal te ha parecido esta Startup?
+Bueno, ya tienes una nueva razón para preferir Ionic en tu proximo proyecto. ¿Qué tal te ha parecido esta Startup?
 
 
 
