--- a/_posts/ionic2/2016-06-05-ionic2.md
+++ b/_posts/ionic2/2016-06-05-ionic2.md
@@ -10,6 +10,8 @@ cover: "http://i.imgur.com/ZYv3zLt.png"
 
 <amp-img width="200" height="200" src="http://i.imgur.com/ZYv3zLt.png"></amp-img>
 
+{% include general/net-promoter-score.html %} 
+
 Hola a todos!!!
 
 Ionic 2 ha llegado a su version [beta 7](https://github.com/driftyco/ionic/blob/2.0/CHANGELOG.md#angular-update-to-200-rc1) y creo que es buen momento para empezar a hablar sobre Ionic 2, lo primero que debemos entender es que Ionic 1 funciona con Angular 1 y Ionic 2 funciona con Angular 2, esto es una grán diferencia debido a la misma
