--- a/_posts/ionic2/2016-06-15-angular2.md
+++ b/_posts/ionic2/2016-06-15-angular2.md
@@ -10,6 +10,8 @@ cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts
 
 <amp-img width="750" height="422" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fangular2%2FZiY7lT8.jpg?alt=media&token=d36fcca3-838a-4725-8489-75e13f5dfbeb"></amp-img>
 
+{% include general/net-promoter-score.html %} 
+
 Angular 2 es la nueva entrega de este increíble Framework para aplicaciones WEB que ahora se ha transformado en una plataforma con la cual puedes hacer aplicaciones WEB y Móviles.
 
 Angular 2 difiere mucho de Angular 1 debido a que ha sido pensado para utilizar las grandes ventajas que otorga ECMAscript 6 y es por esto que vamos a tener que 
