--- a/_posts/ionic2/2016-12-29-clase-1-feed.md
+++ b/_posts/ionic2/2016-12-29-clase-1-feed.md
@@ -20,6 +20,8 @@ versions:
 
 <amp-img width="1024" height="512" layout="responsive" src="/images/posts/ionic2/2016-12-29-clase-1-feed/cover.png"></amp-img>
 
+{% include general/net-promoter-score.html %} 
+
 !Hola! y bienvenido a esta serie de lecciones que te enseñaran como hacer una app en Ionic.
 
 Primero que todo quiero hacer una distincion entre Ionic 1 y el nuevo Ionic.
