--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -19,6 +19,8 @@ versions:
 
 <amp-img width="1024" height="512" layout="responsive" src="/images/posts/ionic2/2017-01-05-clase-2-feed/cover.png"></amp-img> 
 
+{% include general/net-promoter-score.html %} 
+
 !Hola Ioners!
 
 Esta es la Clase 2 en este viaje para construir tu primera App en Ionic. Espero que estes comodo porque esta clase trae una gran cantidad de nuevas cosas que vas a necesitar para entender Ionic, pero no te preocupes porque vas a encontrarlas útiles después cuando tú continúas creando increíbles vistas y lógica en tu App.
