--- a/_posts/ionic2/2017-04-18-auth0-ionic.md
+++ b/_posts/ionic2/2017-04-18-auth0-ionic.md
@@ -27,6 +27,8 @@ Este tutorial pretende mostrar como agregar Auth0 a tu App de Ionic. Auth0 te pr
 
 <amp-img width="685" height="343" layout="responsive" src="https://auth0.com/modules/twittercard/1x-new.png" alt="Observables"></amp-img>
 
+{% include general/net-promoter-score.html %} 
+
 ## ¿ Que es Auth0 ?
 
 Auth0 es un proveedor de metodos de autenticación como los basados en JWT, Multifactor y Single Sign-on  entre otros. Logrando simplificar todo este proceso que normalmente 
