--- a/_posts/tips/2016-07-26-es6-ionic-2.md
+++ b/_posts/tips/2016-07-26-es6-ionic-2.md
@@ -12,6 +12,8 @@ cover: "http://i.cubeupload.com/kYzZHh.png"
 
 <amp-img width="1024" height="450" layout="responsive" src="http://i.cubeupload.com/kYzZHh.png"></amp-img>
 
+{% include general/net-promoter-score.html %} 
+
 # Principales características 
 
 ## **Clases**
