--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -23,6 +23,8 @@ versions:
 
 <amp-img width="1024" height="512" layout="responsive" src="/images/posts/tips/2016-08-09-fork-join/cover.jpg"></amp-img>
 
+{% include general/net-promoter-score.html %} 
+
 # ¿Qué son las peticiones en paralelo?
 
 Hacer peticiones en paralelo, puede llegar a un caso muy usual cuando nos conectamos a una **API REST** y nos sirve para ejecutar más  de una petición al mismo tiempo y tener los resultados de cada una por separado de forma síncrona.
