--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -12,6 +12,7 @@ cover: "http://i.cubeupload.com/WCkFFp.jpg"
 
 <amp-img width="1200" height="630" layout="responsive" src="http://i.cubeupload.com/WCkFFp.jpg"></amp-img>
 <br/>
+{% include general/net-promoter-score.html %} 
 
 Los algoritmos de sincronización pueden llegar a ser algo complejos, sobre todo cuando tenemos varios usuarios compartiendo recursos y queremos que exista un soporte offline.
 
