:tada: new article

--- a/_posts/news/2017-09-05-stencil.md
+++ b/_posts/news/2017-09-05-stencil.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "¿ Que es Stencil ?"
+title: "¿Qué es Stencil?"
 keywords: "Ionic"
 date: 2017-09-04
 tags: [ionic2, news]
@@ -16,21 +16,21 @@ cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts
 
 Primero, antes de que pienses que esto va a hacer que tengas que volver a realizar tus Apps de nuevo o aprender Ionic de nuevo, esta tecnologia seria un componente que tendria Ionic en sus versiones futuras y que deberia ser transparente para ti su integración en el core de Ionic v4.0.
 
-## ¿ Que es Stencil ?
+## ¿Qué es Stencil?
 
 Stencil es un compilador que toma archivos TSX ( [JSX](https://facebook.github.io/react/docs/introducing-jsx.html) + [TS](https://www.typescriptlang.org/) ) y los convierte en [Web components nativos](https://developer.mozilla.org/es/docs/Web/Web_Components) y adicionalmente no importa el framework que utilices Angular, React o VueJs (Con esto podriamos pensar que Ionic va a soportar estos frameworks en el futuro).
 
-## ¿ Que soluciona Stencil ?
+## ¿Qué soluciona Stencil?
 
 Bueno, instintivamente podemos deducir que el *rendimiento* por ser componentes nativos, pero adicionalmente, el *tamaño* de los componentes lo cual es un requerimiento de las PWA y tambien la pesadilla de la *fragmentación* de los frameworks donde uno no es compatible con el otro.
 
 {% include blog/subscribe.html %}
 
-## ¿ Ya puedo empezar a utilizarlo ?
+## ¿Ya puedo empezar a utilizarlo?
 
 Si, puedes ingresar a su sitio oficial y seguir los pasos de instalacion [aquí](https://stenciljs.com/docs/getting-started).
 
-## ¿ Donde puedo verlo funcionando ?
+## ¿Donde puedo verlo funcionando?
 
 El sitio oficial de [stencil](https://stenciljs.com/) esta hecho con esta tecnologia. ademas, deberias de ver los [demos](https://stenciljs.com/demos) y en especial [este](https://stencil-fiber-demo.firebaseapp.com/) donde se muestra una solución a un problema que viene a resolver React Fiber pero que ya funciona muy bien con Stencil. 
 
