:tada: new article

--- a/_posts/ionic2/2017-09-20-pwa-ionic.md
+++ b/_posts/ionic2/2017-09-20-pwa-ionic.md
@@ -5,7 +5,7 @@ keywords: "pwa,ionic"
 date: 2017-09-20
 tags: [testing, demos]
 categories: ionic2
-author: carlosrojaso
+author: carlosrojas
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2F2017-09-20-pwa-ionic.md%2Fwhat-is-pwa-img.png?alt=media&token=e108e594-ab04-418f-9331-15e286798204"
 versions:
   - title: 'ionic'
