--- a/_posts/news/2017-10-03-ionic-3-7.md
+++ b/_posts/news/2017-10-03-ionic-3-7.md
@@ -63,6 +63,7 @@ Una reciente actualización `@ionic/app-scripts (3.0.0)` que usa `ngo` una herra
 ```
 ionic build ios --aot --minifyjs --minifycss
 ```
+{% include blog/subscribe2.html %}
 
 ### Ionic 4
 
