Post de Cambios

--- a/_posts/news/2017-10-22-cambios.md
+++ b/_posts/news/2017-10-22-cambios.md
@@ -2,13 +2,12 @@
 layout: post
 title: "Cambios en el Blog"
 keywords: "news"
-date: 2017-10-28
+date: 2017-10-30
 tags: [news]
 categories: news
 author: carlosrojas
 cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2017-10-22-cambios%2FAccessories.png?alt=media&token=08cd5f56-deb9-4631-b1dc-abff004a2c4f"
 editname: "news/2017-10-22-cambios.md"
-draft: true
 ---
 > Hemos cambiado nuestro nombre para hablar de mas cosas interesantes.
 
@@ -17,7 +16,7 @@ draft: true
 
 Si ingresaste a nuestro Blog te has dado cuenta que algunas cosas cambiaron, pero no te preocupes, es algo positivo y te vamos a contar el por que.
 
-Ionbook nacio con la idea de ser un libro abierto sobre Ionic en especifico y partimos con eso en mente. Luego, el framework ha ido evolucionando y la comunidad también , donde cada vez queremos hacer mas cosas en diferentes plataformas. Es por esto que ahora vamos a hacer lo mismo pero alrededor de Angular.
+Ionbook nacio con la idea de ser un libro abierto sobre Ionic y partimos con eso en mente. Luego, el framework ha ido evolucionando y la comunidad también , donde cada vez queremos hacer mas cosas en diferentes plataformas. Es por esto que ahora vamos a hacer lo mismo pero alrededor de Angular.
 
 Es decir, vamos a poder hablar de Angular, Ionic, Firebase y Nativescript. sin que las personas se confundan por el nombre.
 
